# flatline

./: README.md  pyproject.toml
src/flatline/: UI.css  app.py  command_line.py  tabs.py
src/ghost/: app.py  command_line.py  main.py
