[project]
name = "flatline"
description = "Flatline for job and system management"
dynamic = ["version"]
requires-python = ">= 3.11"
dependencies = [
  "textual>=3.0.0",
  "textual-plotext>=1.0.1"
]

[project.scripts]
flatline = "flatline.main:main"

[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm >= 8.2"]
build-backend = "setuptools.build_meta"